config/operator/base/webhook/manifests.yaml
---
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  creationTimestamp: null
  name: mutating-webhook-configuration
webhooks:
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: webhook-service
      namespace: system
      path: /mutate-scale-spectrum-ibm-com-v1beta1-cluster
  failurePolicy: Fail
  name: mcluster.scale.spectrum.ibm.com
  rules:
  - apiGroups:
    - scale.spectrum.ibm.com
    apiVersions:
    - v1beta1
    operations:
    - CREATE
    - UPDATE
    resources:
    - clusters
  sideEffects: None
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: webhook-service
      namespace: system
      path: /mutate-scale-spectrum-ibm-com-v1beta1-filesystem
  failurePolicy: Ignore
  name: mfilesystem.scale.spectrum.ibm.com
  rules:
  - apiGroups:
    - scale.spectrum.ibm.com
    apiVersions:
    - v1beta1
    operations:
    - CREATE
    - UPDATE
    resources:
    - filesystems
  sideEffects: None
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  creationTimestamp: null
  name: validating-webhook-configuration
webhooks:
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: webhook-service
      namespace: system
      path: /validate-scale-spectrum-ibm-com-v1beta1-cloudcsidisk
  failurePolicy: Fail
  name: vcloudcsidisk.scale.spectrum.ibm.com
  rules:
  - apiGroups:
    - scale.spectrum.ibm.com
    apiVersions:
    - v1beta1
    operations:
    - CREATE
    - UPDATE
    - DELETE
    resources:
    - cloudcsidisks
  sideEffects: None
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: webhook-service
      namespace: system
      path: /validate-scale-spectrum-ibm-com-v1beta1-cluster
  failurePolicy: Fail
  name: vcluster.scale.spectrum.ibm.com
  rules:
  - apiGroups:
    - scale.spectrum.ibm.com
    apiVersions:
    - v1beta1
    operations:
    - CREATE
    - UPDATE
    resources:
    - clusters
  sideEffects: None
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: webhook-service
      namespace: system
      path: /validate-pod-eviction
  failurePolicy: Fail
  name: veviction.scale.spectrum.ibm.com
  rules:
  - apiGroups:
    - ""
    apiVersions:
    - v1
    - v1beta1
    operations:
    - CREATE
    resources:
    - pods/eviction
  sideEffects: None
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: webhook-service
      namespace: system
      path: /validate-scale-spectrum-ibm-com-v1beta1-filesystem
  failurePolicy: Fail
  name: vfilesystem.scale.spectrum.ibm.com
  rules:
  - apiGroups:
    - scale.spectrum.ibm.com
    apiVersions:
    - v1beta1
    operations:
    - CREATE
    - UPDATE
    - DELETE
    resources:
    - filesystems
  sideEffects: None
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: webhook-service
      namespace: system
      path: /validate-scale-spectrum-ibm-com-v1beta1-localdisk
  failurePolicy: Fail
  name: vlocaldisk.scale.spectrum.ibm.com
  rules:
  - apiGroups:
    - scale.spectrum.ibm.com
    apiVersions:
    - v1beta1
    operations:
    - CREATE
    - UPDATE
    - DELETE
    resources:
    - localdisks
  sideEffects: None
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: webhook-service
      namespace: system
      path: /validate-scale-spectrum-ibm-com-v1alpha1-approvalrequest
  failurePolicy: Fail
  name: vapprovalrequest.scale.spectrum.ibm.com
  rules:
  - apiGroups:
    - scale.spectrum.ibm.com
    apiVersions:
    - v1alpha1
    operations:
    - UPDATE
    - DELETE
    resources:
    - approvalrequests
  sideEffects: None
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: webhook-service
      namespace: system
      path: /validate-scale-spectrum-ibm-com-v1alpha1-asyncreplication
  failurePolicy: Fail
  name: vasyncreplication.scale.spectrum.ibm.com
  rules:
  - apiGroups:
    - scale.spectrum.ibm.com
    apiVersions:
    - v1alpha1
    operations:
    - CREATE
    - UPDATE
    - DELETE
    resources:
    - asyncreplications
  sideEffects: None
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: webhook-service
      namespace: system
      path: /validate-scale-spectrum-ibm-com-v1alpha1-clusterinterconnect
  failurePolicy: Fail
  name: vclusterinterconnect.scale.spectrum.ibm.com
  rules:
  - apiGroups:
    - scale.spectrum.ibm.com
    apiVersions:
    - v1alpha1
    operations:
    - UPDATE
    - DELETE
    resources:
    - clusterinterconnects
  sideEffects: None
